[package]
name = "rest-api-shared"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
auth-middleware = ["service-sdk/my-nosql-data-reader-sdk"]

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-nosql-sdk",
    "macros",
    "my-nosql-data-reader-sdk",
] }

serde = { version = "*", features = ["derive"] }
serde_repr = "*"
serde_json = "*"

async-trait = "*"
